--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -2,8 +2,22 @@
   width: 50vw;
 }
 
+.mobile {
+  display: none;
+}
+
 @media only screen and (max-width: 600px) {
   .search {
+    display: none;
+  }
+
+  .mobile {
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .mobile {
     display: none;
   }
 }
